--- a/main.ipynb
+++ b/main.ipynb
@@ -8,7 +8,7 @@
     "### **LAB #5 - Redes Neuronales Recurrentes (RNN) para Series de Tiempo**\n",
     "\n",
     "- Derek Arreaga - 22537\n",
-    "- Mónica Salvatierra\n",
+    "- Mónica Salvatierra - 22249\n",
     "\n",
     "Link del repositorio: https://github.com/alee2602/LAB5-DS\n",
     "\n"
@@ -1443,9 +1443,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6beb7b27",
+   "metadata": {},
+   "source": [
+    "### **Análisis y Discusión**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3d47b511",
    "metadata": {},
-   "source": []
+   "source": [
+    "La serie temporal analizada corresponde a la producción industrial de helados y postres congelados en Estados Unidos, medida como un índice mensual con base `2012=100`. Los datos brindados abarcan de **enero** de **1985** a **junio** de **2025**, con un total de **486 observaciones**. La estadística descriptiva inicial muestra un **valor promedio de 118.2**, con una **desviación estándar de 24.8** y un rango que va desde un **mínimo de 68.0** hasta un **máximo de 196.8**. La frecuencia inferida es mensual (`MS`), lo cual confirma la estructura temporal de la serie.\n",
+    "\n",
+    "El conjunto se dividió en **462 observaciones** para **entrenamiento** (1985–2023) y **24 observaciones** para **prueba** (2023–2025). El generador de secuencias se configuró con ventanas de **12 pasos**, lo que permite al modelo aprender dependencias anuales dentro de la serie. La estructura final del modelo LSTM fue relativamente compacta, con **19,009** parámetros entrenables distribuidos en una capa LSTM de 64 unidades, seguida de capas densas y regularización con *dropout*.\n",
+    "\n",
+    "Durante el entrenamiento, el modelo mostró una reducción progresiva de la pérdida y del error absoluto medio (MAE), alcanzando valores cercanos a **`0.005`** en escala normalizada. Sin embargo, se debe destacar que el **callback** de `EarlyStopping` no funcionó como se esperaba, ya que no se definió un conjunto de validación explícito. Esto llevó a que el entrenamiento se prolongara por las **200 épocas máximas**, lo que, aunque no resultó en sobreajuste evidente, pudo incrementar el tiempo de cómputo innecesariamente.\n",
+    "\n",
+    "En la etapa de predicción sobre el conjunto de prueba, el modelo logró un **MAE de 4.94** y un **RMSE de 6.01** en la escala original de la serie. Estos valores indican un error promedio de entre 5 y 6 puntos del índice, lo cual representa una desviación moderada considerando la magnitud de la serie (promedio ≈**``118``**). Los primeros resultados muestran que las predicciones capturan la tendencia general, aunque en algunos puntos de quiebre como el caso donde el valor real de 89.3 tuvo una predicción de 101.2, el modelo subestima o sobreestima con mayor amplitud.\n",
+    "\n",
+    "En conclusión, el modelo **``LSTM``** implementado demuestra una **buena capacidad de generalización** en series con estacionalidad anual, logrando **errores** relativamente **bajos** en comparación con la variabilidad natural de la serie. Sin embargo, el rendimiento podría mejorarse al incorporar un conjunto de validación para detener el entrenamiento oportunamente, ajustar hiperparámetros como el número de unidades LSTM o la tasa de **dropout**, y explorar arquitecturas más profundas o híbridas como lo sería **``LSTM``** + **``capas convolucionales``**. Asimismo, sería recomendable analizar los residuos de manera más detallada para identificar si persisten patrones estacionales que el modelo no logra capturar completamente."
+   ]
   }
  ],
  "metadata": {
